# eidos-audition

./: .bazelrc  .travis.yml  README.md  WORKSPACE  WORKSPACE.bazel
.github/workflows/: linux-ci.yml  macos-ci.yml
eidos/audition/: BUILD.bazel  README.md  TODO.md  auditory_feature_extractor.cc  auditory_feature_extractor.h  auditory_feature_extractor_config.bzl  auditory_feature_extractor_config.proto  auditory_feature_extractor_config_tester.cc  auditory_feature_extractor_e2e_test.py  auditory_feature_extractor_main.cc  auditory_feature_extractor_test.cc  auditory_model.cc  auditory_model.h  auditory_model_config.proto  auditory_model_test.cc  auditory_pipeline.cc  auditory_pipeline.h  auditory_pipeline_config.proto  auditory_pipeline_test.cc  auditory_response.cc  auditory_response.h  auditory_response_test.cc  baumgarte_model_test.cc  bruce2018_hair_cell_synapse_model_test.cc  bruce2018_spike_generator_test.cc  carfac_config.proto  carfac_model.cc  carfac_model.h  carfac_model_test.cc  fractional_gaussian_noise_test.cc  gammatone_filterbank_config.proto  gammatone_filterbank_model_test.cc  jackson_spike_generator_test.cc  meddis1986_hair_cell_synapse_model_test.cc  mock_basilar_membrane_model.cc  mock_basilar_membrane_model.h  mock_basilar_membrane_model_test.cc  psychoacoustic_scale_utils.cc  psychoacoustic_scale_utils.h  psychoacoustic_scale_utils_test.cc  (+24 more)
eidos/audition/configs/: BUILD.bazel  bm_baumgarte.textproto  bm_carfac.textproto  bm_gammatone-cooke-and-ma.textproto  bm_gammatone-slaney.textproto  hair_cell_baumgarte_bruce2018.textproto  hair_cell_baumgarte_meddis1986.textproto  hair_cell_baumgarte_sumner2002.textproto  hair_cell_carfac.textproto  hair_cell_carfac_bruce2018.textproto  hair_cell_carfac_meddis1986.textproto  hair_cell_carfac_sumner2002.textproto  hair_cell_gammatone-cooke-and-ma_bruce2018.textproto  hair_cell_gammatone-cooke-and-ma_meddis1986.textproto  hair_cell_gammatone-cooke-and-ma_sumner2002.textproto  hair_cell_gammatone-slaney_bruce2018.textproto  hair_cell_gammatone-slaney_meddis1986.textproto  hair_cell_gammatone-slaney_sumner2002.textproto  hair_cell_zilany2014.textproto  spikes_baumgarte_bruce2018_bruce2018.textproto  spikes_baumgarte_bruce2018_jackson.textproto  spikes_baumgarte_bruce2018_zhang2001.textproto  spikes_carfac_bruce2018_bruce2018.textproto  spikes_carfac_bruce2018_jackson.textproto  spikes_carfac_bruce2018_zhang2001.textproto  spikes_gammatone-cooke-and-ma_bruce2018_bruce2018.textproto  spikes_gammatone-cooke-and-ma_bruce2018_jackson.textproto  spikes_gammatone-cooke-and-ma_bruce2018_zhang2001.textproto  spikes_gammatone-slaney_bruce2018_bruce2018.textproto  spikes_gammatone-slaney_bruce2018_jackson.textproto  spikes_gammatone-slaney_bruce2018_zhang2001.textproto  spikes_zilany2014_bruce2018.textproto  spikes_zilany2014_jackson.textproto  spikes_zilany2014_zhang2001.textproto
eidos/audition/dsam/: Makefile  anf_spikes_binomial.params  auditory_nerve_test.cc  bm_gammatone.params  hair_cell_synapse_test.cc  ihc_meddis_86.params  ihc_meddis_hsr_2000.params  input_data_file.params  show_output.py
eidos/audition/testdata/auditory/: 1kHz_60dB_SPL_tone_baumgarte.exc  1kHz_60dB_SPL_tone_baumgarte.npy  README.md  impulse_1000at0s_and_-1000at0.05s_baumgarte.exc
eidos/audition/testdata/configs/: feature_extractor_config.textproto
eidos/audition/testdata/ne_np/: BUILD.bazel
eidos/port/: BUILD.bazel  logging.h  map_util.h  status-matchers.h  status_macros.h
eidos/stubs/: BUILD.bazel  integral_types.h  logging.h  map_util.h  status-matchers.h  status_macros.h
eidos/utils/: BUILD.bazel  proto_utils.cc  proto_utils.h  proto_utils_test.cc  test.proto  test_utils.cc  test_utils.h
eidos/utils/testdata/: test.textproto
