# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Bazel (http://bazel.io/) WORKSPACE file for Eidos.

workspace(name = "com_google_eidos_audition")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# -------------------------------------------------------------------------
# ZLib. See https://zlib.net.
# -------------------------------------------------------------------------

http_archive(
    name = "net_zlib",
    build_file = "@com_google_protobuf//:third_party/zlib.BUILD",
    sha256 = "c3e5e9fdd5004dcb542feda5ee4f0ff0744628baf8ed2dd5d66f8ca1197cb1a1",
    strip_prefix = "zlib-1.2.11",
    urls = ["https://zlib.net/zlib-1.2.11.tar.gz"],
)

# -------------------------------------------------------------------------
# Google protocol buffers. See
#    https://github.com/protocolbuffers/protobuf
# -------------------------------------------------------------------------
protobuf_version = "3.17.3"
protobuf_sha256 = "c6003e1d2e7fefa78a3039f19f383b4f3a61e81be8c19356f85b6461998ad3db"

http_archive(
    name = "com_google_protobuf",
    sha256 = protobuf_sha256,
    strip_prefix = "protobuf-%s" % protobuf_version,
    urls = ["https://github.com/protocolbuffers/protobuf/archive/v%s.tar.gz" %
            protobuf_version],
)

# Dependencies.
http_archive(
    name = "bazel_skylib",
    strip_prefix = "bazel-skylib-main",
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/main.zip"],
)

# Import external protobuf dependencies into this workspace.
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

# -------------------------------------------------------------------------
# GoogleTest/GoogleMock framework.
# -------------------------------------------------------------------------

googletest_version = "1.10.0"

http_archive(
    name = "com_google_googletest",
    urls = ["https://github.com/abseil/googletest/archive/release-%s.zip" %
            googletest_version],
    sha256 = "94c634d499558a76fa649edb13721dce6e98fb1e7018dfaeba3cd7a083945e91",
    strip_prefix = "googletest-release-%s" % googletest_version,
)

# -------------------------------------------------------------------------
# Google Abseil - C++ Common Libraries
# -------------------------------------------------------------------------

http_archive(
    name = "com_google_absl",
    strip_prefix = "abseil-cpp-master",
    urls = ["https://github.com/abseil/abseil-cpp/archive/master.zip"],
)

# -------------------------------------------------------------------------
# Google Abseil - Python Common Libraries
# -------------------------------------------------------------------------

http_archive(
    name = "io_abseil_py",
    strip_prefix = "abseil-py-master",
    urls = ["https://github.com/abseil/abseil-py/archive/master.zip"],
)

# -------------------------------------------------------------------------
# Boost
# -------------------------------------------------------------------------

boost_version = "1_76_0"

boost_sha256 = "f0397ba6e982c4450f27bf32a2a83292aba035b827a5623a14636ea583318c41"

http_archive(
    name = "org_boost",
    build_file = "@//build:boost.BUILD",
    sha256 = boost_sha256,
    strip_prefix = "boost_%s" % boost_version,
    url = "https://boostorg.jfrog.io/artifactory/main/release/%s/source/boost_%s.tar.bz2" % (
        boost_version.replace("_", "."), boost_version),
)

# -------------------------------------------------------------------------
# Eigen
# -------------------------------------------------------------------------

eigen_version = "3.3.8"

eigen_sha256 = "146a480b8ed1fb6ac7cd33fec9eb5e8f8f62c3683b3f850094d9d5c35a92419a"

http_archive(
    name = "com_gitlab_eigen",
    build_file = "@//build:eigen.BUILD",
    sha256 = eigen_sha256,
    strip_prefix = "eigen-%s" % eigen_version,
    url = "https://gitlab.com/libeigen/eigen/-/archive/%s/eigen-%s.tar.gz" % (
        eigen_version, eigen_version),
)

# -------------------------------------------------------------------------
# wave: Simple C++ library for reading and writting wave files
# -------------------------------------------------------------------------

wave_version = "0.8.2a"

http_archive(
    name = "com_github_wave",
    build_file = "@//build:wave.BUILD",
    urls = ["https://github.com/audionamix/wave/archive/v%s.tar.gz" % wave_version],
    sha256 = "371f49bed7599323579ad95829510e1cfbdefe934547025598b22a8b5010fcb4",
    strip_prefix = "wave-%s/src" % wave_version,
)

# -------------------------------------------------------------------------
# CAR-FAC (cascade of asymmetric resonators with fast-acting compression).
# -------------------------------------------------------------------------

new_git_repository(
    name = "com_google_carfac",
    build_file = "@//build:carfac.BUILD",
    commit = "e70ad6107961bfd68defe60fa258beeed4e9b65d",
    remote = "https://github.com/google/carfac.git",
)

# -------------------------------------------------------------------------
# cnpy: library to read/write .npy and .npz files in C/C++
# -------------------------------------------------------------------------

new_git_repository(
    name = "com_github_cnpy",
    build_file = "@//build:cnpy.BUILD",
    commit = "4e8810b1a8637695171ed346ce68f6984e585ef4",
    remote = "https://github.com/rogersce/cnpy.git",
)

# -------------------------------------------------------------------------
# Six is a Python 2 and 3 compatibility library.
# -------------------------------------------------------------------------

http_archive(
    name = "six_archive",
    build_file = "@//build:six.BUILD",
    sha256 = "70e8a77beed4562e7f14fe23a786b54f6296e34344c23bc42f07b15018ff98e9",
    strip_prefix = "six-1.11.0",
    urls = ["https://pypi.python.org/packages/16/d8/bc6316cf98419719bd59c91742194c111b6f2e85abac88e496adefaf7afe/six-1.11.0.tar.gz#md5=d12789f9baf7e9fb2524c0c64f1773f8"],
)

# -------------------------------------------------------------------------
# Polyphase resampler library (C++ implementation of Matlab's resample).
# -------------------------------------------------------------------------

new_git_repository(
    name = "com_github_resample",
    build_file = "@//build:resample.BUILD",
    commit = "9b43aba322bbfe77d5a9b5ca4adb8aa195c3c0fb",
    remote = "https://github.com/terrygta/SignalResampler.git",
)

# Local Variables:
# mode: python
# End:
