# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Miscelleous stubs which are eventually likely to end up in absl-cpp.
# We keep them separately here to make their existence explicit.

package(default_visibility = [
    "//eidos:__subpackages__",
    "//third_party:__subpackages__",
])

cc_library(
    name = "logging",
    hdrs = ["logging.h"],
    deps = ["@com_google_protobuf//:protobuf"],
)

cc_library(
    name = "map_util",
    hdrs = ["map_util.h"],
    deps = ["@com_google_protobuf//:protobuf"],
)

cc_library(
    name = "status_macros",
    hdrs = ["status_macros.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_protobuf//:protobuf"
    ],
)

# Local Variables:
# mode: python
# End:
